Fix to DC jupyter heatmaps, AssertionError -- IOError in try statement

--- a/DCjupyterHeatmaps/DC_heatmaps.ipynb
+++ b/DCjupyterHeatmaps/DC_heatmaps.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stand-alone heatmap of ILC data, z-scored\n",
+    "# Stand-alone heatmaps of DC data, z-scored, pairwise log2(FC)s, and absolute expression \n",
     "\n",
     "The interaction below loads and initializes a stand alone\n",
     "heatmap widget for exploring gene expression data.  The widget supports\n",
     "selection of genes and conditions using space separated lists of\n",
     "names or \"glob\" patterns.\n",
     "\n",
-    "For example to select all `th0` conditions add `th0*` in the conditions\n",
+    "For example to select all `macrophage` conditions add `*macrophage*` in the conditions\n",
     "text area and click the conditions button.\n",
     "\n",
     "To select `nsf`, `nme4`, and `nudt4` genes add `nsf nme4 nudt4` in the\n",
